// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrugListCell should  match snapshot 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom name-tooltip"
        >
          <button
            aria-controls="id-_r_0_"
            aria-describedby="id-_r_0_"
            aria-expanded="false"
            class="cds--definition-term"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
            </div>
          </button>
          <span
            class="cds--popover"
            id="id-_r_0_"
          >
            <span
              class="cds--popover-content cds--definition-tooltip"
            >
              Amoxicillin/Clavulanic Acid  125 mg/31.25 mg/5 mL Powder for Oral Suspension
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
         
        <div
          class="note-icon-container"
        >
          <div>
            <div>
              Instructions: 
              As directed
            </div>
          </div>
        </div>
      </div>
      <div>
        10mg
         - Topical
         -  5 Day(s)
      </div>
      <div />
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
        id="tag-id-_r_2_"
      >
        <span
          class="cds--tag__label"
          dir="auto"
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugListCell should  match snapshot for drug cell with admin info status as Administered 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom name-tooltip"
        >
          <button
            aria-controls="id-_r_8_"
            aria-describedby="id-_r_8_"
            aria-expanded="false"
            class="cds--definition-term"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </div>
          </button>
          <span
            class="cds--popover"
            id="id-_r_8_"
          >
            <span
              class="cds--popover-content cds--definition-tooltip"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
         
        <div
          class="note-icon-container"
        >
          <div>
            <div>
              Instructions: 
              As directed
            </div>
          </div>
        </div>
      </div>
      <div>
        10ml
         - Oral
         -  10 Day(s)
      </div>
      <div>
        <div
          class="administration-details"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top administration-details-tooltip"
          >
            <button
              aria-controls="id-_r_a_"
              aria-describedby="id-_r_a_"
              aria-expanded="false"
              class="cds--definition-term"
              type="button"
            >
              <div
                class="administration-time-info"
              >
                <test-file-stub
                  class="clock-icon"
                />
                <span
                  style="color: rgb(82, 82, 82);"
                >
                  08:30
                </span>
              </div>
            </button>
            <span
              class="cds--popover"
              id="id-_r_a_"
            >
              <span
                class="cds--popover-content cds--definition-tooltip"
              >
                08:30
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
        id="tag-id-_r_c_"
      >
        <span
          class="cds--tag__label"
          dir="auto"
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrugListCell should  match snapshot for for drug cell with admin info status as Administered-Late 1`] = `
<div>
  <div
    class="drug-order-details"
  >
    <div
      class="order-details"
    >
      <div
        class="drug-name-container"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom name-tooltip"
        >
          <button
            aria-controls="id-_r_3_"
            aria-describedby="id-_r_3_"
            aria-expanded="false"
            class="cds--definition-term"
            type="button"
          >
            <div
              class="drug-chart-drug-name"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </div>
          </button>
          <span
            class="cds--popover"
            id="id-_r_3_"
          >
            <span
              class="cds--popover-content cds--definition-tooltip"
            >
              Combintation Chlorpheniramine, Paracetamol and Pseudophedrine 100 mL Syrup (Cough and Cold Syrup)
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
         
        <div
          class="note-icon-container"
        >
          <div>
            <div>
              Instructions: 
              As directed
            </div>
          </div>
        </div>
      </div>
      <div>
        10ml
         - Oral
         -  10 Day(s)
      </div>
      <div>
        <div
          class="administration-details"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top administration-details-tooltip"
          >
            <button
              aria-controls="id-_r_5_"
              aria-describedby="id-_r_5_"
              aria-expanded="false"
              class="cds--definition-term"
              type="button"
            >
              <div
                class="administration-time-info"
              >
                <test-file-stub
                  class="clock-icon"
                />
                <span
                  style="color: rgb(255, 0, 0);"
                >
                  02:30
                </span>
              </div>
            </button>
            <span
              class="cds--popover"
              id="id-_r_5_"
            >
              <span
                class="cds--popover-content cds--definition-tooltip"
              >
                02:30
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="medication-tags"
    >
      <div
        class="cds--tag cds--tag--sm cds--layout--size-sm cds--tag--blue"
        id="tag-id-_r_7_"
      >
        <span
          class="cds--tag__label"
          dir="auto"
          title="Rx"
        >
          Rx
        </span>
      </div>
    </div>
  </div>
</div>
`;
